# CPURaytracerRasterizerCGFS

./: Makefile  README.md  debug.bash  meson.build  run.bash
cgfs/: canvas.c  canvas.h  pixel.c  pixel.h  ppm.c  scene.c  scene.h  sphere.c  sphere.h
include/: app.h  event.h  keys.h
lib/: canvas.c  canvas.h  pixel.c  pixel.h  ppm.c  scene.c  scene.h  sphere.c  sphere.h
src/: app.c  event.c  keys.c  main.c
utils/: canvas.c  canvas.h  pixel.c  pixel.h  ppm.c  scene.c  scene.h  sphere.c  sphere.h
